--- a/index.html
+++ b/index.html
@@ -1,12 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- description -->
-    <!-- link style -->
-    <!-- favicon -->
-    <title>GAMiFY - Home</title>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Gaming-Website">
+    <link rel="icon" href="assets/images/favicon.svg">
+    <link rel="stylesheet" href="styles/Bootstrap.css">
+    <title>GAMiFY</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+          rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:wght@300..900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+</head>
+<body class="p-0 m-0 Box-border Font-poppins text-white">
+<div class="primary w-full h-100px position-fixed d-flex direction-row justify-content-between text-white z-2">
+    <div class="font-29 font-weight-800 line-weight-44 m-b-30 m-l-59 m-t-25">
+        LOGO
+    </div>
+    <div class="d-flex g-5">
+        <div class="w-673 h-41 m-t-40 d-flex justify-content-evenly">
+            <a class="dec-none text-white" href="index.html">
+                Home
+                <div class="d-flex flex-row gap-3 position-relative m-t-7 r-14">
+                    <div class="line orange radius-20"></div>
+                    <div class="dot radius-20 orange"></div>
+                </div>
+            </a>
+            <a class="dec-none text-white" href="page2.html">Games</a>
+            <a class="dec-none text-white" href="">About us</a>
+            <a class="dec-none text-white" href="">News</a>
+        </div>
+        <button class="button w-131 h-41">light</button>
+    </div>
+</div>
+<main class="w-full primary">
+    <div class="primary d-flex direction-row justify-content-between">
+        <div class="m-l-147 h-409 w-max m-t-203">
+            <p class="font-weight-700 w-479 text-orange font-20"><b>Proved By Your Name</b></p>
+            <h1 class="text-white font-50 font-weight-700 m-t-17">Work that we<br>produce for our <br> clients</h1>
+            <p class="text-white font-16 font-weight-500 m-t-26">Lorem Ipsum is simply dummy text of the printing and <br> typesetting
+                industry. Lorem Ipsum has been the industry's <br> standard.</p>
+            <button class="button w-195 h-53 rounded-5">
+                <a class="dec-none font-16 text-white" href="#">Get more details</a>
+            </button>
+        </div>
+        <img class="m-l-147 w-806 h-761" src="assets/images/4aed1bc4524c8c056b1d97bb57a48953.svg" alt="joy_stick">
+        <img class="w-59 h-64 position-absolute l-1168 t-202" src="assets/images/7574eba020cb0c7fddd36f74c17ab9e2.svg" alt="">
+        <img class="w-101 h-99 position-absolute l-828 t-190" src="assets/images/922ee7fe64427cb8f360647aacf513e4.svg" alt="">
+        <img class="w-96 h-30 position-absolute l-649 t-409" src="assets/images/5994a73fb7debb6a504c5dfe9e16fc7e.svg" alt="">
+
+    </div>
+    <div id="div7">
+        <div class="Font-rubik d-flex justify-content-between m-b-57">
+            <span class="Font-rubik font-weight-700 font-29 line-weight-58 m-l-120">Currently Trending Games</span>
+            <button class="button2 text-white m-r-146">SEE ALL</button>
+        </div>
+    </div>
+    <div id="div8">
+        <ul class="images d-flex flex-row justify-content-between">
+
+            <li class="second-section-buttom-li">
+                <article>
+                    <img class="games" src="assets/images/Rectangle%2023.svg" alt="rect23">
+                    <div class="picture-caption">
+                        <img class="fire" src="assets/images/Group.svg" alt="fire">
+                        <span class="followers">40 Followers</span>
+                    </div>
+                </article>
+            </li>
+
+            <li class="second-section-buttom-li">
+                <article>
+                    <img class="games" src="assets/images/Rectangle 24.svg" alt="rect24">
+                    <div class="picture-caption">
+                        <img class="fire" src="assets/images/Group.svg" alt="fire">
+                        <span class="followers">40 Followers</span>
+                    </div>
+                </article>
+            </li>
+
+            <li class="second-section-buttom-li">
+                <article>
+                    <img class="games" src="assets/images/Rectangle 25.svg" alt="rect25">
+                    <div class="picture-caption">
+                        <img class="fire" src="assets/images/Group.svg" alt="fire">
+                        <span class="followers">40 Followers</span>
+                    </div>
+                </article>
+            </li>
+
+            <li class="second-section-buttom2-li">
+                <article>
+                    <img class="games" src="assets/images/Rectangle 26.svg" alt="rect26">
+                    <div class="picture-caption">
+                        <img class="fire" src="assets/images/Group.svg" alt="fire">
+                        <span class="followers">40 Followers</span>
+                    </div>
+                </article>
+            </li>
+
+        </ul>
+
+    </div>
+    <div id="div9">
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+    </div>
+    <div>
+        <p id="p4">
+            <span id="span2">Lorem Ipsum</span>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's
+            standard dummy text ever since the 1500s,
+        </p>
+    </div>
+    <div id="div10">
+        <img id="spider" src="./assets/images/Rectangle%204.svg" alt="">
+        <img id="dots" src="assets/images/Group%2021.svg" alt="">
+    </div>
+
+    <div class="div11">
+
+        <div class="div12">
+
+            <div>
+                <span>Our Recent Projects</span>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry.</p>
+            </div>
+
+            <div class="div13">
+
+                <div class="image1">
+                    <img src="assets/images/Rectangle 15.svg" alt="rect 15">
+                    <img src="assets/images/Rectangle 16.svg" alt="rect 16">
+                    <img src="assets/images/Rectangle 17.svg" alt="rect 17">
+                </div>
+
+                <div class="image1">
+                    <img src="assets/images/Rectangle 19.svg" alt="rect 19">
+                    <img src="assets/images/Rectangle 18.svg" alt="rect 18">
+                    <img src="assets/images/Rectangle 20.svg" alt="rect 20">
+                </div>
+            </div>
+
+            <button id="see-all-button">SEE ALL</button>
+
+        </div>
+    </div>
+    <div class="div14">
+        <span>Lorem Ipsum</span>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. </p>
+    </div>
+    <div class="div15">
+
+        <div class="div16">
+            <span>Stay in the loop</span>
+            <p>Subscribe to receive the latest news and updates about TDA . <br>We promise not to spam you! </p>
+        </div>
+
+        <div class="div17">
+            <p>Enter email address</p>
+            <button>Continue</button>
+        </div>
+    </div>
+    <footer>
+
+        <div class="div20">
+            <div class="div20-1">
+                <p class="sec1">LOGO</p>
+                <p class="sec2">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry. </p>
+                <p class="sec3">@Logo</p>
+            </div>
+            <div class="div20-2">
+                <p id="about-us">About us</p>
+                <ul class="about-ul">
+                    <li>Zeux</li>
+                    <li>Portfolio</li>
+                    <li>Careers</li>
+                    <li>Contact us</li>
+                </ul>
+            </div>
+            <div class="div20-3">
+                <p class="sec1">Contact us</p>
+                <p class="sec2">Lorem Ipsum is simply dummy text <br> of the printing and typesetting <br> industry.
+                </p>
+                <p class="sec3">+908 89097 890</p>
+            </div>
+            <div class="div20-4">
+                <img src="assets/images/Group 5.svg" alt="">
+                <img src="assets/images/Group 11.svg" alt="">
+                <img src="assets/images/Group 10.svg" alt="">
+                <img src="assets/images/Group 9.svg" alt="">
+            </div>
+        </div>
+        <div id="copy"><p>Copyright ® 2022 <b>your name</b> All rights Rcerved</p></div>
+        <hr id="hr">
+
+    </footer>
+
+</main>
+
+</body>
 </html>
+
