--- a/index.html
+++ b/index.html
@@ -54,49 +54,49 @@
         <img class="w-96 h-30 position-absolute l-649 t-409" src="assets/images/5994a73fb7debb6a504c5dfe9e16fc7e.svg" alt="">
 
     </div>
-    <div id="div7">
+    <div >
         <div class="Font-rubik d-flex justify-content-between m-b-57">
-            <span class="Font-rubik font-weight-700 font-29 line-weight-58 m-l-120">Currently Trending Games</span>
+            <span class="Font-rubik font-weight-700 font-31 line-weight-58 m-l-120">Currently Trending Games</span>
             <button class="button2 text-white m-r-146">SEE ALL</button>
         </div>
     </div>
     <div id="div8">
         <ul class="images d-flex flex-row justify-content-between">
 
-            <li class="second-section-buttom-li">
+            <li >
                 <article>
                     <img class="games" src="assets/images/Rectangle%2023.svg" alt="rect23">
-                    <div class="picture-caption">
+                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
                         <img class="fire" src="assets/images/Group.svg" alt="fire">
                         <span class="followers">40 Followers</span>
                     </div>
                 </article>
             </li>
 
-            <li class="second-section-buttom-li">
+            <li >
                 <article>
                     <img class="games" src="assets/images/Rectangle 24.svg" alt="rect24">
-                    <div class="picture-caption">
+                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
                         <img class="fire" src="assets/images/Group.svg" alt="fire">
                         <span class="followers">40 Followers</span>
                     </div>
                 </article>
             </li>
 
-            <li class="second-section-buttom-li">
+            <li >
                 <article>
                     <img class="games" src="assets/images/Rectangle 25.svg" alt="rect25">
-                    <div class="picture-caption">
+                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
                         <img class="fire" src="assets/images/Group.svg" alt="fire">
                         <span class="followers">40 Followers</span>
                     </div>
                 </article>
             </li>
 
-            <li class="second-section-buttom2-li">
+            <li >
                 <article>
                     <img class="games" src="assets/images/Rectangle 26.svg" alt="rect26">
-                    <div class="picture-caption">
+                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
                         <img class="fire" src="assets/images/Group.svg" alt="fire">
                         <span class="followers">40 Followers</span>
                     </div>
@@ -106,31 +106,31 @@
         </ul>
 
     </div>
-    <div id="div9">
+    <div class="Font-poppins font-weight-600 font-35 line-weight-65 d-flex text-center margin">
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
     </div>
     <div>
-        <p id="p4">
-            <span id="span2">Lorem Ipsum</span>
+        <p class="Font-poppins font-16 font-weight-400 line-weight-30 text-start w-545 paraf">
+            <span class="d-block Font-poppins font-29 font-weight-600 line-weight-56 m-b-32 text-start">Lorem Ipsum</span>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's
             standard dummy text ever since the 1500s,
         </p>
     </div>
-    <div id="div10">
-        <img id="spider" src="./assets/images/Rectangle%204.svg" alt="">
-        <img id="dots" src="assets/images/Group%2021.svg" alt="">
+    <div class="m-t-150 m-l-148">
+        <img class="z-1 position-relative spider" src="./assets/images/Rectangle%204.svg" alt="">
+        <img class="dots position-absolute " src="assets/images/Group%2021.svg" alt="">
     </div>
 
-    <div class="div11">
+    <div class="w-full h-678">
 
-        <div class="div12">
+        <div class="text-white m-t-150">
 
             <div>
-                <span>Our Recent Projects</span>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry.</p>
+                <span class="d-block font-weight-700 font-31 text w-350">Our Recent Projects</span>
+                <p class="w-479">Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry.</p>
             </div>
 
             <div class="div13">
