--- a/index.html
+++ b/index.html
@@ -1,210 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Gaming-Website">
-    <link rel="icon" href="assets/images/favicon.svg">
-    <link rel="stylesheet" href="styles/Bootstrap.css">
+    <link rel="icon"  href="assets/images/favicon.svg">
     <title>GAMiFY</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-          rel="stylesheet">
+    <link rel="stylesheet" href="styles/footer1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:wght@300..900&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body class="p-0 m-0 Box-border Font-poppins text-white">
-<div class="primary w-full h-100px position-fixed d-flex direction-row justify-content-between text-white z-2">
-    <div class="font-29 font-weight-800 line-weight-44 m-b-30 m-l-59 m-t-25">
-        LOGO
-    </div>
-    <div class="d-flex g-5">
-        <div class="w-673 h-41 m-t-40 d-flex justify-content-evenly">
-            <a class="dec-none text-white" href="index.html">
-                Home
-                <div class="d-flex flex-row gap-3 position-relative m-t-7 r-14">
-                    <div class="line orange radius-20"></div>
-                    <div class="dot radius-20 orange"></div>
-                </div>
-            </a>
-            <a class="dec-none text-white" href="page2.html">Games</a>
-            <a class="dec-none text-white" href="">About us</a>
-            <a class="dec-none text-white" href="">News</a>
-        </div>
-        <button class="button w-131 h-41">light</button>
-    </div>
-</div>
-<main class="w-full primary">
-    <div class="primary d-flex direction-row justify-content-between">
-        <div class="m-l-147 h-409 w-max m-t-203">
-            <p class="font-weight-700 w-479 text-orange font-20"><b>Proved By Your Name</b></p>
-            <h1 class="text-white font-50 font-weight-700 m-t-17">Work that we<br>produce for our <br> clients</h1>
-            <p class="text-white font-16 font-weight-500 m-t-26">Lorem Ipsum is simply dummy text of the printing and <br> typesetting
-                industry. Lorem Ipsum has been the industry's <br> standard.</p>
-            <button class="button w-195 h-53 rounded-5">
-                <a class="dec-none font-16 text-white" href="#">Get more details</a>
-            </button>
-        </div>
-        <img class="m-l-147 w-806 h-761" src="assets/images/4aed1bc4524c8c056b1d97bb57a48953.svg" alt="joy_stick">
-        <img class="w-59 h-64 position-absolute l-1168 t-202" src="assets/images/7574eba020cb0c7fddd36f74c17ab9e2.svg" alt="">
-        <img class="w-101 h-99 position-absolute l-828 t-190" src="assets/images/922ee7fe64427cb8f360647aacf513e4.svg" alt="">
-        <img class="w-96 h-30 position-absolute l-649 t-409" src="assets/images/5994a73fb7debb6a504c5dfe9e16fc7e.svg" alt="">
+<body class="borderbox p-0 m-0 font-poppins">
 
-    </div>
-    <div >
-        <div class="Font-rubik d-flex justify-content-between m-b-57">
-            <span class="Font-rubik font-weight-700 font-31 line-weight-58 m-l-120">Currently Trending Games</span>
-            <button class="button2 text-white m-r-146">SEE ALL</button>
+<nav class="navbar navbar-expand-lg background-1 height-100">
+    <div class="container-fluid">
+        <a class="navbar-brand font-s-29 font-w-800 ml-58 mt-12 text-white" href="#">LOGO</a>
+        <button class="navbar-toggler color-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse mr-59" id="navbarSupportedContent">
+            <ul class="navbar-nav mt-25 text-align-center">
+                <li class="nav-item">
+                    <a class="nav-link active text-white text-white" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item ml-88">
+                    <a class="nav-link text-white" href="#">Games</a>
+                </li>
+                <li class="nav-item ml-88  ">
+                    <a class="nav-link text-white" aria-current="page" href="#">AboutUs</a>
+                </li>
+                <li class="nav-item ml-88">
+                    <a class="nav-link text-white mr-32" aria-current="page" href="#" >News</a>
+                </li>
+            </ul>
+            <button class="btn text-white btn-background width-130 light-button rounded-2 " type="submit">Light</button>
         </div>
     </div>
-    <div id="div8">
-        <ul class="images d-flex flex-row justify-content-between">
+</nav>
 
-            <li >
-                <article>
-                    <img class="games" src="assets/images/Rectangle%2023.svg" alt="rect23">
-                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
-                        <img class="fire" src="assets/images/Group.svg" alt="fire">
-                        <span class="followers">40 Followers</span>
-                    </div>
-                </article>
-            </li>
 
-            <li >
-                <article>
-                    <img class="games" src="assets/images/Rectangle 24.svg" alt="rect24">
-                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
-                        <img class="fire" src="assets/images/Group.svg" alt="fire">
-                        <span class="followers">40 Followers</span>
-                    </div>
-                </article>
-            </li>
+<main class="background-3">
+    <div class="container">
+        <div class=" row gap-110 justify-content-center justify-content-lg-between">
 
-            <li >
-                <article>
-                    <img class="games" src="assets/images/Rectangle 25.svg" alt="rect25">
-                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
-                        <img class="fire" src="assets/images/Group.svg" alt="fire">
-                        <span class="followers">40 Followers</span>
-                    </div>
-                </article>
-            </li>
+            <div class="first-section-left col-lg-6 col-md-12 col-12 order-md-2 order-lg-1 text-center text-md-center text-lg-start">
+                <p class="first-section-left-p1">Proved By Your Name</p>
+                <h1 class="first-section-left-p2 ml-xs">Work that we produce for our clients</h1>
+                <p class="first-section-left-p3 ml-xs">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                <button class="btn first-section-left-btn text-white rounded-5 ">Get more details</button>
+            </div>
 
-            <li >
-                <article>
-                    <img class="games" src="assets/images/Rectangle 26.svg" alt="rect26">
-                    <div class="picture-caption d-flex flex-row justify-content-center text-white Font-rubik font-weight-500 font-20 g-9 m-t-25">
-                        <img class="fire" src="assets/images/Group.svg" alt="fire">
-                        <span class="followers">40 Followers</span>
-                    </div>
-                </article>
-            </li>
+            <img class="width-807 col-md-12 col-lg-6 height-761 d-none d-md-block d-lg-block order-md-1 order-lg-2 ml-md" src="assets/images/4aed1bc4524c8c056b1d97bb57a48953.svg" alt="joy_stick">
 
+        </div>
+    </div>
+
+    <div class="mt-132">
+
+        <div class="container">
+            <div class="second-section-top row justify-content-lg-between justify-content-md-center justify-content-center">
+                <p class="second-section-top-p  text-white col-lg-6 col-md-12 col-12 text-center ">Currently Trending Games</p>
+                <button class="btn btn-second-section text-white rounded-3 d-md-none d-none d-lg-block col-lg-6">SEE ALL</button>
+            </div>
+        </div>
+
+
+        <ul class="second-section-buttom container ">
+            <div class=" row justify-content-center">
+                <li class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
+                    <article class="card background-1 card-border text-white">
+                        <img class="card-img-top hover-overlay" src="assets/images/Rectangle 23.svg" alt="rect23">
+                        <div class="card-body card-bottom d-flex flex-row justify-content-center">
+                            <img src="./assets/images/Group.svg" alt="fire">
+                            <span class="card-text">40 Followers</span>
+                        </div>
+                    </article>
+                </li>
+                <li class="col-lg-3 col-md-6 col-12 d-flex justify-content-center" >
+                    <article class="card background-1 card-border text-white">
+                        <img class="card-img-top" src="assets/images/Rectangle 24.svg" alt="rect24">
+                        <div class="card-body card-bottom d-flex flex-row justify-content-center">
+                            <img src="./assets/images/Group.svg" alt="fire">
+                            <span class="card-text">40 Followers</span>
+                        </div>
+                    </article>
+                </li>
+
+                <li class="col-lg-3 col-md-6 col-12 d-flex justify-content-center" >
+                    <article class="card background-1 card-border text-white">
+                        <img class="card-img-top img-mt"  src="assets/images/Rectangle 25.svg" alt="rect25">
+                        <div class="card-body card-bottom d-flex flex-row justify-content-center">
+                            <img src="./assets/images/Group.svg" alt="fire">
+                            <span class="card-text">40 Followers</span>
+                        </div>
+                    </article>
+                </li>
+
+                <li class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
+                    <article class="card background-1 card-border text-white">
+                        <img class="img card-img-top img-mt" src="assets/images/Rectangle 26.svg" alt="rect26">
+                        <div class="card-body card-bottom d-flex flex-row justify-content-center">
+                            <img src="./assets/images/Group.svg" alt="fire">
+                            <span class="card-text">40 Followers</span>
+                        </div>
+                    </article>
+                </li>
+
+            </div>
         </ul>
 
-    </div>
-    <div class="Font-poppins font-weight-600 font-35 line-weight-65 d-flex text-center margin">
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        </p>
-    </div>
-    <div>
-        <p class="Font-poppins font-16 font-weight-400 line-weight-30 text-start w-545 paraf">
-            <span class="d-block Font-poppins font-29 font-weight-600 line-weight-56 m-b-32 text-start">Lorem Ipsum</span>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s,
-        </p>
-    </div>
-    <div class="m-t-150 m-l-148">
-        <img class="z-1 position-relative spider" src="./assets/images/Rectangle%204.svg" alt="">
-        <img class="dots position-absolute " src="assets/images/Group%2021.svg" alt="">
-    </div>
-
-    <div class="w-full h-678">
-
-        <div class="text-white m-t-150">
-
-            <div>
-                <span class="d-block font-weight-700 font-31 text w-350">Our Recent Projects</span>
-                <p class="w-479">Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry.</p>
-            </div>
-
-            <div class="div13">
-
-                <div class="image1">
-                    <img src="assets/images/Rectangle 15.svg" alt="rect 15">
-                    <img src="assets/images/Rectangle 16.svg" alt="rect 16">
-                    <img src="assets/images/Rectangle 17.svg" alt="rect 17">
-                </div>
-
-                <div class="image1">
-                    <img src="assets/images/Rectangle 19.svg" alt="rect 19">
-                    <img src="assets/images/Rectangle 18.svg" alt="rect 18">
-                    <img src="assets/images/Rectangle 20.svg" alt="rect 20">
-                </div>
-            </div>
-
-            <button id="see-all-button">SEE ALL</button>
-
-        </div>
-    </div>
-    <div class="div14">
-        <span>Lorem Ipsum</span>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. </p>
-    </div>
-    <div class="div15">
-
-        <div class="div16">
-            <span>Stay in the loop</span>
-            <p>Subscribe to receive the latest news and updates about TDA . <br>We promise not to spam you! </p>
-        </div>
-
-        <div class="div17">
-            <p>Enter email address</p>
-            <button>Continue</button>
-        </div>
-    </div>
-    <footer>
-
-        <div class="div20">
-            <div class="div20-1">
-                <p class="sec1">LOGO</p>
-                <p class="sec2">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry. </p>
-                <p class="sec3">@Logo</p>
-            </div>
-            <div class="div20-2">
-                <p id="about-us">About us</p>
-                <ul class="about-ul">
-                    <li>Zeux</li>
-                    <li>Portfolio</li>
-                    <li>Careers</li>
-                    <li>Contact us</li>
-                </ul>
-            </div>
-            <div class="div20-3">
-                <p class="sec1">Contact us</p>
-                <p class="sec2">Lorem Ipsum is simply dummy text <br> of the printing and typesetting <br> industry.
-                </p>
-                <p class="sec3">+908 89097 890</p>
-            </div>
-            <div class="div20-4">
-                <img src="assets/images/Group 5.svg" alt="">
-                <img src="assets/images/Group 11.svg" alt="">
-                <img src="assets/images/Group 10.svg" alt="">
-                <img src="assets/images/Group 9.svg" alt="">
+        <div class="container">
+            <div class="row justify-content-center">
+                <p class="text-white text-center lorem text-lg-center text-md-start ml">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
         </div>
-        <div id="copy"><p>Copyright ® 2022 <b>your name</b> All rights Rcerved</p></div>
-        <hr id="hr">
+    </div>
 
-    </footer>
+
 
 </main>
-
 </body>
 </html>
-
