--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="borderbox p-0 m-0 font-poppins">
 
-<nav class="navbar navbar-expand-lg background-1 height-100">
+<nav class="navbar navbar-expand-lg background-1 height-100 nav-border">
     <div class="container-fluid">
         <a class="navbar-brand font-s-29 font-w-800 ml-58 mt-12 text-white" href="#">LOGO</a>
         <button class="navbar-toggler color-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,6 +46,9 @@
 
 
 <main class="background-3">
+    <img class="img-cry1 d-none d-lg-block position-absolute" src="assets/images/cry 1.svg" alt="cry1">
+    <img class="img-unreal d-none d-lg-block position-absolute" src="assets/images/unreal 1.svg" alt="unreal">
+    <img class="img-unity d-none d-lg-block position-absolute" src="assets/images/unity 1.svg" alt="unity 1">
     <div class="container">
         <div class=" row gap-110 justify-content-center justify-content-lg-between">
 
@@ -56,7 +59,7 @@
                 <button class="btn first-section-left-btn text-white rounded-5 ">Get more details</button>
             </div>
 
-            <img class="width-807 col-md-12 col-lg-6 height-761 d-none d-md-block d-lg-block order-md-1 order-lg-2 ml-md" src="assets/images/4aed1bc4524c8c056b1d97bb57a48953.svg" alt="joy_stick">
+            <img class="width-807 col-md-12 col-lg-6 height-761 d-none d-md-block d-lg-block order-md-1 order-lg-2 ml-md" src="assets/images/joy_stick 1.svg" alt="joy_stick">
 
         </div>
     </div>
@@ -71,13 +74,13 @@
         </div>
 
 
-        <ul class="second-section-buttom container ">
+        <ul class="second-section-buttom container">
             <div class=" row justify-content-center">
                 <li class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
                     <article class="card background-1 card-border text-white">
                         <img class="card-img-top hover-overlay" src="assets/images/Rectangle 23.svg" alt="rect23">
                         <div class="card-body card-bottom d-flex flex-row justify-content-center">
-                            <img src="./assets/images/Group.svg" alt="fire">
+                            <img src="assets/images/fire 1.svg" alt="fire">
                             <span class="card-text">40 Followers</span>
                         </div>
                     </article>
@@ -86,7 +89,7 @@
                     <article class="card background-1 card-border text-white">
                         <img class="card-img-top" src="assets/images/Rectangle 24.svg" alt="rect24">
                         <div class="card-body card-bottom d-flex flex-row justify-content-center">
-                            <img src="./assets/images/Group.svg" alt="fire">
+                            <img src="assets/images/fire 1.svg" alt="fire">
                             <span class="card-text">40 Followers</span>
                         </div>
                     </article>
@@ -96,7 +99,7 @@
                     <article class="card background-1 card-border text-white">
                         <img class="card-img-top img-mt"  src="assets/images/Rectangle 25.svg" alt="rect25">
                         <div class="card-body card-bottom d-flex flex-row justify-content-center">
-                            <img src="./assets/images/Group.svg" alt="fire">
+                            <img src="assets/images/fire 1.svg" alt="fire">
                             <span class="card-text">40 Followers</span>
                         </div>
                     </article>
@@ -104,9 +107,9 @@
 
                 <li class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
                     <article class="card background-1 card-border text-white">
-                        <img class="img card-img-top img-mt" src="assets/images/Rectangle 26.svg" alt="rect26">
+                        <img class="card-img-top img-mt" src="assets/images/Rectangle 26.svg" alt="rect26">
                         <div class="card-body card-bottom d-flex flex-row justify-content-center">
-                            <img src="./assets/images/Group.svg" alt="fire">
+                            <img src="assets/images/fire 1.svg" alt="fire">
                             <span class="card-text">40 Followers</span>
                         </div>
                     </article>
@@ -122,8 +125,130 @@
         </div>
     </div>
 
+    <div class="text-white third-section container ">
+        <div class="row">
+            <div class="col-12">
+                <span class="third-section-span">Lorem Ipsum</span>
+                <p class="third-section-p text-start text-lg-start">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <img class="rect4 rounded-2 position-relative z-1 d-none d-md-block d-lg-none col-12 col-md-12" src="assets/images/Rectangle 4 (1).svg" alt="rect4">
+            <img class="rect4 rounded-2 position-relative z-1 col-12 d-md-none d-none d-lg-block col-md-12" src="assets/images/Rectangle 4.svg" alt="rect4">
+            <img class="rect4 rounded-2 position-relative z-1 col-12 d-md-none d-block d-lg-none col-md-12 col-12" src="assets/images/Rectangle 4 (2).svg" alt="rect4">
+            <img class="group21 d-none d-lg-block position-absolute" src="assets/images/Group 21.svg" alt="Group21">
+        </div>
+    </div>
+
+    <div class="fourth-section container">
+
+        <div class="mt-148 text-white row">
+
+            <div class="row">
+                <div class="col-12">
+                    <p class="fourth-section-p1">Our Recent Projects</p>
+                    <p class="fourth-section-p2 text-center">Lorem Ipsum is simply dummy text of the printing and  typesetting industry.</p>
+                </div>
+            </div>
+
+            <div class="fourth-section-buttom row justify-content-center">
+
+                <div class="row d-lg-block d-none">
+                    <img class="col-12 col-lg-4 rec15" src="assets/images/Rectangle 15.svg" alt="rect 15">
+                    <img class="col-12 col-lg-4 rec16" src="assets/images/Rectangle 16.svg" alt="rect 16">
+                    <img class="col-12 col-lg-4 rec17" src="assets/images/Rectangle 17.svg" alt="rect 17">
+                    <img class="col-12 col-lg-4 rec19" src="assets/images/Rectangle 19.svg" alt="rect 19">
+                    <img class="col-12 col-lg-4 rec18" src="assets/images/Rectangle 18.svg" alt="rect 18">
+                    <img class="col-12 col-lg-4 rec20" src="assets/images/Rectangle 20.svg" alt="rect 20">
+                </div>
+                <div class="row d-md-block d-lg-none d-none img-md justify-content-center">
+                    <img class="col-12 col-md-6 rec17" src="assets/images/Rectangle 17.svg" alt="rect 17">
+                    <img class="col-12 col-md-6 rec20" src="assets/images/Rectangle 20 (1).svg" alt="rect 20">
+                    <img class="col-12 col-md-6 rec15" src="assets/images/Rectangle 15.svg" alt="rect 15">
+                    <img class="col-12 col-md-6 rec16" src="assets/images/Rectangle 16.svg" alt="rect 16">
+                    <img class="col-12 col-md-6 rec19" src="assets/images/Rectangle 19.svg" alt="rect 19">
+                    <img class="col-12 col-md-6 rec18" src="assets/images/Rectangle 18.svg" alt="rect 18">
+                </div>
+                <div class="row d-md-none d-lg-none d-block img-md justify-content-center">
+                    <img class="col-12 rec17" src="assets/images/Rectangle 17.svg" alt="rect 17">
+                    <img class="col-12  rec20" src="assets/images/Rectangle 20 (2).svg" alt="rect 20">
+                    <img class="col-12  rec15" src="assets/images/Rectangle 15.svg" alt="rect 15">
+                </div>
+            </div>
+        </div>
+
+        <button class="btn btn-second-section text-white rounded-3 btn-margin col-12">SEE ALL</button>
+    </div>
+    </div>
+
+    <div class="fifth-section text-white container">
+        <div class="row">
+            <div class="col-12 text-center text-lg-start">
+                <span class="fifth-section-span">Lorem Ipsum</span>
+                <p class="fifth-section-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container justify-content-around text-white sixth-section">
+        <div class="row">
+            <div class="sixth-section-left row">
+                <div class="col-12">
+                    <span class="sixth-section-left-span ">Stay in the loop</span>
+                    <p class="sixth-section-left-p text-center text-md-start text-lg-left">Subscribe to receive the latest news and updates about TDA . <br>We promise not to spam you! </p>
+                </div>
+            </div>
+
+            <div class="row sixth-section-right justify-content-between align-content-center rounded-2">
+                <p class="sixth-section-right-p col-6">Enter email address</p>
+                <button class="btn sixth-section-btn rounded-2 background-2 col-6">Continue</button>
+            </div>
+        </div>
+    </div>
 
 
+    <footer class="myfooter text-white w-1440 ">
+
+        <div class="container row">
+            <div class="col footer-sec1-1">
+                <p class="p1">LOGO</p>
+                <p class="p2">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry. </p>
+                <p class="p3">@Logo</p>
+            </div>
+            <div class="col footer-sec1-2">
+
+                <ul class="ul-li ">
+                    <li class=" text-nowrap">About us</li>
+                    <li>Zeux</li>
+                    <li>Portfolio</li>
+                    <li>Contact us</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+            <div class="col footer-sec1-3 ">
+                <p class="p1">Contact us</p>
+                <p class="p2">Lorem Ipsum is simply dummy text <br> of the printing and typesetting <br> industry. </p>
+                <p class="p3">+908 89097 890</p>
+            </div>
+            <div class="col d-lg-flex d-none footer-sec1-4">
+                <img class="image" src="assets/images/Group 5.svg" alt="Group 5">
+                <img class="image" src="assets/images/Group 11.svg" alt="Group 11">
+                <img class="image" src="assets/images/Group 10.svg" alt="Group 10">
+                <img class="image" src="assets/images/Group 9.svg" alt="Group 9">
+            </div>
+        </div>
+        <div class="d-lg-block d-md-none d-none">
+            <hr class="hr ">
+            <div class="text-nowrap copy"><p >Copyright ® 2022 <b>your name</b> All rights Rcerved</p></div>
+        </div>
+
+
+        <div class="d-lg-none d-md-block d-none">
+            <div class="text-nowrap copy"><p >Copyright ® 2022 <b>your name</b> All rights Rcerved</p></div>
+        </div>
+    </footer>
 </main>
 </body>
 </html>
